crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctype_a_public_dbl_quote_lt.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPE a PUBLIC\"<\"####)"
---
[
    Token {
        data: "DOCTYPE a PUBLIC\"<",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
